--- a/ejercicios.html
+++ b/ejercicios.html
@@ -3,6 +3,88 @@
 <head>
   <meta charset="UTF-8">
   <title>Ejercicios Unidad 2</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-image: url('https://img.freepik.com/vector-premium/fondo-conexion-red-lineas_23-2148894657.jpg');
+      background-size: cover; /* Asegura que la imagen cubra toda la página */
+      background-position: center; /* Centra la imagen */
+      background-attachment: fixed; /* Fija la imagen al fondo */
+      font-family: Arial, sans-serif;
+    }
+    .card {
+      background-color: rgba(128, 128, 128, 0.5); /* Gris con 50% de transparencia */
+      border-radius: 8px;
+      padding: 20px;
+      max-width: 400px;
+      margin: 0 auto;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      font-family: Arial, sans-serif;
+    }
+    .card h1, .card h2 {
+      margin: 10px 0;
+    }
+    .bold-blue {
+      font-weight: bold;
+      color: #3898dc;
+    }
+    .normal-black {
+      font-weight: normal;
+      color: white;
+    }
+
+    /* Estilos para el ejercicio 7 */
+    h2, #tareasList, input, button {
+      color: #ffffff; /* Color blanco para el texto del ejercicio 7 */
+    }
+
+    /* Contenedor flex para alinear en una fila */
+    .ejercicio7-container {
+      display: flex;
+      align-items: center; /* Alineación vertical de los elementos */
+      margin-bottom: 20px;
+    }
+
+    /* Estilo para el input del ejercicio 7 */
+    input[type="text"] {
+      padding: 8px; /* Ajustamos el padding */
+      width: 200px; /* Tamaño más reducido */
+      font-size: 14px; /* Tamaño de fuente más pequeño */
+      color: black; /* Color del texto al escribir */
+      background-color: white; /* Fondo blanco */
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      margin-right: 5px; /* Espacio entre el input y el primer botón */
+    }
+
+    /* Para mejorar visibilidad al escribir */
+    input[type="text"]::placeholder {
+      color: #999; /* Placeholder de color gris */
+    }
+
+    /* Estilos para los botones */
+    button {
+      padding: 8px 12px; /* Ajustamos el tamaño del botón */
+      background-color: #8431d1;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-right: 5px; /* Espacio entre los botones */
+    }
+
+    button:hover {
+      background-color: #0066ff;
+    }
+
+    /*ul {*/
+    /*  list-style-type: none; !* Quitamos los bullets de la lista *!*/
+    /*  padding: 0;*/
+    /*}*/
+
+
+  </style>
   <script>
     function ejercicio1() {
       // Pedir frase válida (al menos 5 palabras)
@@ -332,8 +414,12 @@
 </head>
 <body>
 
-  <h1>Nombre: Cintia Castel González</h1>
-  <h2>Ciclo: 2º DAW</h2>
+<div class="card">
+  <h2><span class="bold-blue">Nombre:</span> <span class="normal-black">Cintia Castel González</span></h2>
+  <h2><span class="bold-blue">Ciclo:</span> <span class="normal-black">Desarrollo de Aplicaciones Web (DAW)</span></h2>
+  <h2><span class="bold-blue">Curso:</span> <span class="normal-black">2º</span></h2>
+  <h2><span class="bold-blue">Módulo del autor:</span> <span class="normal-black">Desarrollo Web en Entorno Cliente</span></h2>
+</div>
 
 <button onclick="ejercicio1()">Ejecutar Ejercicio 1</button>
 <button onclick="ejercicio2()">Ejecutar Ejercicio 2</button>
@@ -342,12 +428,15 @@
 <button onclick="ejercicio5()">Ejecutar Ejercicio 5</button>
 <button onclick="ejercicio6()">Ejecutar Ejercicio 6</button>
 
+
+<div class="ejercicio7-container">
   <h2>Ejercicio 7 - Gestión de Tareas</h2>
   <input type="text" id="tareaInput" placeholder="Introduce una tarea" />
   <button onclick="agregarTarea()">Agregar Tarea</button>
   <button onclick="mostrarTareas()">Mostrar Todas las Tareas</button>
   <button onclick="mostrarPendientes()">Mostrar Tareas Pendientes</button>
-  <ul id="tareasList"></ul>
+</div>
+<ul id="tareasList"></ul>
 
 </body>
 </html>
